force-app/main/default/objects/cgcloud__System_Number_Segment__c/cgcloud__System_Number_Segment__c.object-meta.xml
<CustomObject>
    <description>System Number Segment</description>
    <label>System Number Segment</label>
    <nameField>
        <displayFormat>Seg-{000}</displayFormat>
        <label>Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Number Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>