force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Initial_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initial_Value__c</fullName>
    <description>Initial Value</description>
    <inlineHelpText>Initial Value</inlineHelpText>
    <label>Initial Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>