force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Max_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Value__c</fullName>
    <description>Max Value</description>
    <inlineHelpText>Max Value</inlineHelpText>
    <label>Max Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>