force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Numerical_System__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Numerical_System__c</fullName>
    <description>Numerical System</description>
    <label>Numerical System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alpha</fullName>
            </value>
            <value>
                <fullName>Binary</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Hex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>