force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Post_Delimiter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Post_Delimiter__c</fullName>
    <description>Post Delimiter</description>
    <inlineHelpText>Post Delimiter</inlineHelpText>
    <label>Post Delimiter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>