force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Pre_Delimiter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pre_Delimiter__c</fullName>
    <description>Pre Delimiter</description>
    <inlineHelpText>Pre Delimiter</inlineHelpText>
    <label>Pre Delimiter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>