force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Segment_Length__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Segment_Length__c</fullName>
    <description>Segment Length</description>
    <label>Segment Length</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>