force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Segment_Type__c</fullName>
    <description>Segment Type</description>
    <inlineHelpText>Segment Type</inlineHelpText>
    <label>Segment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Constant</fullName>
            </value>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>InitCounter</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>