force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Sort</description>
    <inlineHelpText>Sort</inlineHelpText>
    <label>Sort</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>