force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Sort_Validation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort_Validation__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Not for Layout, but for validation</description>
    <inlineHelpText>Not for Layout, but for validation</inlineHelpText>
    <label>Sort</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>