force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__System_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__System_Number__c</fullName>
    <description>Relation to System Number</description>
    <label>System Number</label>
    <referenceTo>cgcloud__System_Number__c</referenceTo>
    <relationshipLabel>System Number Segments</relationshipLabel>
    <relationshipName>System_Number_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>