force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Type_Unique_Validation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Type_Unique_Validation__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Segment Type should be a unique field for Number Definition- Hidden Field for Validation</description>
    <label>Unique Segment Type</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>