force-app/main/default/objects/cgcloud__System_Number_Segment__c/fields/cgcloud__Type_Validation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Type_Validation__c</fullName>
    <formula>CASE( cgcloud__Segment_Type__c , &apos;LU&apos;, 19, &apos;Counter&apos;, 20, &apos;InitCounter&apos;,22,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Validation</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>