force-app/main/default/objects/cgcloud__System_Number_Segment__c/validationRules/cgcloud__Numerical_System.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Numerical_System</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( cgcloud__Numerical_System__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Numerical_System__c</errorDisplayField>
    <errorMessage>The Numerical System can&apos;t be empty.</errorMessage>
</ValidationRule>