force-app/main/default/objects/cgcloud__System_Number_Segment__c/validationRules/cgcloud__Segment_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Segment_Type_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(cgcloud__Segment_Type__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Segment_Type__c</errorDisplayField>
    <errorMessage>The Segment Type can&apos;t be empty.</errorMessage>
</ValidationRule>